# absolution

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  THIRD-PARTY-NOTICES  USAGE.md  build.zig  build.zig.zon
.devcontainer/: Containerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
cmake/: AbsolutionConfig.cmake  AbsolutionFuzzer.cmake  ApplyRedef.cmake  FuzzmateConfig.cmake  FuzzmateFuzzer.cmake  RunAbsolution.cmake  RunFuzzmate.cmake
example/protocol_parser/: CMakeLists.txt  README.md
example/protocol_parser/fuzz/: fuzz_decode.c
example/protocol_parser/include/: protocol.h
example/protocol_parser/src/: decoder.c  main.c  session.c
scripts/: gen-golden.sh  integration.py  integration.zig  verify_plan.sh
src/: Invariant.zig  Parser.zig  cgen.zig  include_paths.zig  integration_test.zig  invariant.zig  main.zig  root.zig  seed.zig  type_flatten.zig
src/cgen/: builder.zig  emit.zig  ir.zig  tree.zig
tests/: README_TEMPLATE.md
tests/anonymous_struct_union_enum_and_funcptr/: target.c  target.c.zon
tests/anonymous_types/: anon.c.zon
tests/array_of_struct/: array_of_struct.c.zon
tests/array_of_struct_array_mutation/: target.c  target.c.zon
tests/arrays/: array.c.zon
tests/basic/: README.md  basic.c.zon
tests/big_pool/: README.md  target.c  target.c.in  target.c.zon
tests/bigone/: README.md  bigone.c  bigone.c.zon
tests/bitfield_const/: bitfield.c  bitfield.c.zon
tests/bitfields_and_const_globals_not_sampled/: target.c  target.c.zon
tests/complex_nested_struct_enum_array_funcptr/: target.c  target.c.zon
tests/complex_struct/: complex.c.zon
(+79 files in other folders)
